2874 [Video Encoder]        improved AVS pre-check (regression of 2871)
2873 [MediaInfo]            added support for MediaInfo 18.08
     [HD Streams Extractor] improved language detection support
2872 [x26x]                 changed the log level for ffmpeg from warning to error
2871 [Video Encoder]        added high bit depth support to the AVS pre-check
2870 [x264]                 added --aq-mode 3. feature request #639
2869 [AviSynth]             improved error handling
                            fixed a potential crash (regression of 2863)
2868 [HD Streams Extractor] added an option to select if the output prefix should be added (default: enabled)
                            add the output prefix also if the "file mode" is used
2867 [AviSynth]             only check the system installed AviSynth if the portable one is not forced
2866 [OneClick]             fixed tracks 2 to n-1 not properly selecting their input track stream (regression of 2861). bug #907
2865 [AviSynth]             improved error handling
2864 [L-SMASH Indexer]      added high bit depth support
2863 [AviSynth]             changed default value of "always use the included AviSynth" to enabled
                            unload avisynthwrapper during startup detection to ensure that the portable build is used if required
2862 [Xvid]                 improved workaround to be able to use Xvid in portable AviSynth mode
2861 [OneClick]             fixed an out of bounds error. bug #919
2860 [AviSynth]             improved AviSynth detection
2859 [x26x]                 flag a job as "error" if the number of frames of the input and output does not match
2858 [Video Encoder]        removed input/output settings from the command line preview
2857 [x265]                 replaced avs4x26x with ffmpeg
2856 [x264]                 replaced avs4x26x with ffmpeg
2855 [Chapter Creator]      input fps can always be selected